--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Sweet Tetris</title>
 
 </head>
-
 <body>
+	<div id="wrapper">
 
+	</div>
     <!-- Include main.js -->
 	<script src="main.js"></script>
-
-    
 </body>
 </html>
