--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css"/>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <title>Sweet Tetris</title>
 
 </head>
 <body>
 	<div id="wrapper">
-
+		<table id="playfield">
+			<tr class='0'>
+			  <td id='0'></td>
+			  <td id='1'></td>
+			  <td id='2'></td>
+			  <td id='3'></td>
+			</tr>
+		</table>
+	
 	</div>
     <!-- Include main.js -->
 	<script src="main.js"></script>
