--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="sweetalert.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <title>Sweet Tetris</title>
 
 </head>
 <body>
-    <button id="start-game" type="button">start</button>
+    
 	<div id="wrapper">
-		<table id="playfield">
+		<button id="start-game" type="button">start</button>
 		
+		<table id="playfield">
 		</table>
+
+		 <button type="button" id="test">Click me!</button>
 	
 	</div>
     <!-- Include main.js -->
+    <script src="js/sweetalert.min.js"></script>
 	<script src="main.js"></script>
 </body>
 </html>
