--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     
 	<div id="wrapper">
 		<button id="start-game" type="button">start</button>
-		
+
 		<table id="playfield">
 		</table>
 
-		 <button type="button" id="test">Click me!</button>
+		 <button type="button" id="game-over">Click me!</button>
 	
 	</div>
     <!-- Include main.js -->
