--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
 <body>
     
 	<div id="wrapper">
+		<div class="clearfix">
+
+		<div class="columns-2">
 		<button id="start-game" type="button">start</button>
 
 		<table id="playfield">
 		</table>
 
 		 <button type="button" id="game-over">Click me!</button>
-	
+		</div>
+
+		<div class="columns-2">
+			<h1>Highscore</h1>
+		</div>
+
+		</div>
 	</div>
     <!-- Include main.js -->
     <script src="js/sweetalert.min.js"></script>
