--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                <div class="columns-3 column-left">
                        <h1>Welcome</h1>
                    <p id="welcome-text">This is a game, created for you. <br>The rules are simple, arrange the figures so that they form a straight line, one line eguals a certain point and you will be rewarded with points for every finished line. 
-                   <br><br>If you play your cards right, you'r name will appear on the top ten players.
+                   <br><br>If you play your cards right, your name will appear on the top ten players.
                    <br><br>Good luck.</p>
                     </div><!--- end columns-3 ---->
                
