--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div id="header">
             <img id="headerPicture" src="pictures/header_tetris2.png">
             <button id="start-game" type="button">start game</button>
+            <button id="reload-game" type="button">refresh page</button>
         </div><!--- end header ---->
         
 		<div class="clearfix">
